# base64

./: .gitignore  CMakeLists.txt  CMakePresets.json  app.c  base64.c  rfid_app.py
.devcontainer/: Dockerfile
aes/: CMakeLists.txt
base64_src/: CMakeLists.txt
base64_src/inc/: base64.h
base64_src/src/: base64.c
token_service/: CMakeLists.txt
token_service/inc/: srv_token.h
token_service/src/: srv_token.c
